--- a/qt/ecmcEL7062_CSP_expert.ui
+++ b/qt/ecmcEL7062_CSP_expert.ui
@@ -3307,7 +3307,7 @@
          </rect>
         </property>
         <property name="text">
-         <string>Enable</string>
+         <string>Readback</string>
         </property>
         <property name="channel" stdset="0">
          <string notr="true">$(IOC):m$(MasterID)s$(SlaveID)-Drv$(ID)-TuneTrgRB</string>
@@ -3582,160 +3582,6 @@
       </color>
      </property>
     </widget>
-   </widget>
-  </widget>
-  <widget class="QSplitter" name="splitter_6">
-   <property name="geometry">
-    <rect>
-     <x>30</x>
-     <y>300</y>
-     <width>111</width>
-     <height>171</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>7</pointsize>
-    </font>
-   </property>
-   <property name="orientation">
-    <enum>Qt::Vertical</enum>
-   </property>
-   <widget class="caLabel" name="calabel_92">
-    <property name="sizePolicy">
-     <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-      <horstretch>0</horstretch>
-      <verstretch>0</verstretch>
-     </sizepolicy>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>10</pointsize>
-      <kerning>false</kerning>
-     </font>
-    </property>
-    <property name="text">
-     <string>Enable</string>
-    </property>
-   </widget>
-   <widget class="caLabel" name="calabel_93">
-    <property name="sizePolicy">
-     <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-      <horstretch>0</horstretch>
-      <verstretch>0</verstretch>
-     </sizepolicy>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>10</pointsize>
-      <kerning>false</kerning>
-     </font>
-    </property>
-    <property name="text">
-     <string>Cont.</string>
-    </property>
-   </widget>
-   <widget class="caLabel" name="calabel_94">
-    <property name="sizePolicy">
-     <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-      <horstretch>0</horstretch>
-      <verstretch>0</verstretch>
-     </sizepolicy>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>10</pointsize>
-      <kerning>false</kerning>
-     </font>
-    </property>
-    <property name="text">
-     <string>Trig. Mode B1</string>
-    </property>
-   </widget>
-   <widget class="caLabel" name="calabel_95">
-    <property name="sizePolicy">
-     <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-      <horstretch>0</horstretch>
-      <verstretch>0</verstretch>
-     </sizepolicy>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>10</pointsize>
-      <kerning>false</kerning>
-     </font>
-    </property>
-    <property name="text">
-     <string>Trig. Mode B2</string>
-    </property>
-   </widget>
-   <widget class="caLabel" name="calabel_96">
-    <property name="sizePolicy">
-     <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-      <horstretch>0</horstretch>
-      <verstretch>0</verstretch>
-     </sizepolicy>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>9</pointsize>
-      <kerning>false</kerning>
-     </font>
-    </property>
-    <property name="text">
-     <string>Enable Pos. Edge</string>
-    </property>
-   </widget>
-   <widget class="caLabel" name="calabel_97">
-    <property name="sizePolicy">
-     <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-      <horstretch>0</horstretch>
-      <verstretch>0</verstretch>
-     </sizepolicy>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>10</pointsize>
-      <kerning>false</kerning>
-     </font>
-    </property>
-    <property name="text">
-     <string>Enable Neg. Edge</string>
-    </property>
-   </widget>
-   <widget class="caLabel" name="calabel_98">
-    <property name="sizePolicy">
-     <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-      <horstretch>0</horstretch>
-      <verstretch>0</verstretch>
-     </sizepolicy>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>10</pointsize>
-      <kerning>false</kerning>
-     </font>
-    </property>
-    <property name="text">
-     <string>Reserved</string>
-    </property>
-   </widget>
-   <widget class="caLabel" name="calabel_99">
-    <property name="sizePolicy">
-     <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-      <horstretch>0</horstretch>
-      <verstretch>0</verstretch>
-     </sizepolicy>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>10</pointsize>
-      <kerning>false</kerning>
-     </font>
-    </property>
-    <property name="text">
-     <string>Reserved</string>
-    </property>
    </widget>
   </widget>
  </widget>
