--- a/qt/ecmcEL70x1.ui
+++ b/qt/ecmcEL70x1.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>120</width>
-    <height>500</height>
+    <height>498</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -872,6 +872,28 @@
      <string notr="true">ecmcE_slave_frame.ui</string>
     </property>
    </widget>
+   <widget class="caShellCommand" name="cashellcommand_2">
+    <property name="geometry">
+     <rect>
+      <x>5</x>
+      <y>5</y>
+      <width>26</width>
+      <height>18</height>
+     </rect>
+    </property>
+    <property name="label">
+     <string notr="true">HW</string>
+    </property>
+    <property name="labels">
+     <string>Open first axis</string>
+    </property>
+    <property name="files">
+     <string>bash /ioc/modules/qt/ecmcOpenObject.sh</string>
+    </property>
+    <property name="args">
+     <string>OPEN_EC_TOOL_HW_DIAG_MAIN $(IOC) $(MasterID)  $(SlaveID)</string>
+    </property>
+   </widget>
    <zorder>cainclude</zorder>
    <zorder>tabWidget</zorder>
    <zorder>calabel_10</zorder>
@@ -881,6 +903,7 @@
    <zorder>calabel_13</zorder>
    <zorder>caled_9</zorder>
    <zorder>camessagebutton_2</zorder>
+   <zorder>cashellcommand_2</zorder>
   </widget>
   <zorder>frame</zorder>
   <zorder>calabel_3</zorder>
@@ -940,6 +963,11 @@
    <class>caByte</class>
    <extends>QWidget</extends>
    <header>caByte</header>
+  </customwidget>
+  <customwidget>
+   <class>caShellCommand</class>
+   <extends>QWidget</extends>
+   <header>caShellCommand</header>
   </customwidget>
  </customwidgets>
  <resources/>
