--- a/qt/ecmcEx72x1_CST_STD.ui
+++ b/qt/ecmcEx72x1_CST_STD.ui
@@ -694,9 +694,32 @@
     <string notr="true">ecmcE_slave_frame.ui</string>
    </property>
   </widget>
+  <widget class="caShellCommand" name="cashellcommand_2">
+   <property name="geometry">
+    <rect>
+     <x>5</x>
+     <y>5</y>
+     <width>26</width>
+     <height>18</height>
+    </rect>
+   </property>
+   <property name="label">
+    <string notr="true">HW</string>
+   </property>
+   <property name="labels">
+    <string>Open first axis</string>
+   </property>
+   <property name="files">
+    <string>bash /ioc/modules/qt/ecmcOpenObject.sh</string>
+   </property>
+   <property name="args">
+    <string>OPEN_EC_TOOL_HW_DIAG_MAIN $(IOC) $(MasterID)  $(SlaveID)</string>
+   </property>
+  </widget>
   <zorder>cainclude</zorder>
   <zorder>tabWidget</zorder>
   <zorder>CiA402_2</zorder>
+  <zorder>cashellcommand_2</zorder>
  </widget>
  <customwidgets>
   <customwidget>
@@ -738,6 +761,11 @@
    <class>caByte</class>
    <extends>QWidget</extends>
    <header>caByte</header>
+  </customwidget>
+  <customwidget>
+   <class>caShellCommand</class>
+   <extends>QWidget</extends>
+   <header>caShellCommand</header>
   </customwidget>
  </customwidgets>
  <resources/>
